Fixed graph on mobile

--- a/src/styles/AnalyticsandContent/renderContent.scss
+++ b/src/styles/AnalyticsandContent/renderContent.scss
@@ -281,7 +281,9 @@ $grey-box-background: #f8f8f8;
           grid-area: scoring;
           margin: 2em 0 0 0;
         }
-        #chart_div {
+        #chart_div,
+        #chart_All,
+        #chart_Single {
           grid-area: chart;
           margin: 1em 0 0 0;
         }
